# majo-budgeting-app-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: accounts.py  analytics.py  budgets.py  transactions.py  users.py
app/core/: config.py  security.py
app/database/: base.py  connection.py
app/models/: account.py  budget.py  transaction.py  user.py
app/schemas/: account.py  budget.py  transaction.py  user.py
tests/: conftest.py  test_sample.py
